--- a/index.html
+++ b/index.html
@@ -7,6 +7,13 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="card">
+        <div class="qrCode">
+            <img src="img/qr-code.png" alt="QR Code image">
+        </div>
+        <div class="cardDetail">
+            <h1></h1>
+        </div>
+    </div>
 </body>
 </html>
