--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
             <img src="img/qr-code.png" alt="QR Code image">
         </div>
         <div class="cardDetail">
-            <h1></h1>
+            <h1>Improve your front-end skills by building projects</h1>
+            <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
     </div>
 </body>
