--- a/index.html
+++ b/index.html
@@ -16,5 +16,9 @@
             <p>Scan the QR code to visit Frontend Mentor and take your coding skills to the next level</p>
         </div>
     </div>
+    <div class="myCode">
+        <p>Challenge by <a href="https://www.frontendmentor.io/challenges/qr-code-component-iux_sIO_H">Frontend Mentor</a>.
+        Coded by <a href="#">Khushi</a>.</p>
+    </div>
 </body>
 </html>
