--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code</title>
+    <link rel="icon" href="img/icon.png" type="image/x-icon"/>,
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -21,4 +22,4 @@
         Coded by <a href="#">Khushi</a>.</p>
     </div>
 </body>
-</html>
+</html>git 
