--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>QR Code</title>
-    <link rel="icon" href="img/icon.png" type="image/x-icon"/>,
+    <link rel="icon" href="img/icon.png" type="image/x-icon" />,
     <link rel="stylesheet" href="style.css">
 </head>
+
 <body>
     <div class="card">
         <div class="qrCode">
@@ -18,8 +20,8 @@
         </div>
     </div>
     <div class="myCode">
-        <p>Challenge by <a href="https://www.frontendmentor.io/challenges/qr-code-component-iux_sIO_H">Frontend Mentor</a>.
-        Coded by <a href="#">Khushi</a>.</p>
+        <p>Challenge by <a href="https://www.frontendmentor.io/challenges/qr-code-component-iux_sIO_H">Frontend Mentor</a>. Coded by <a href="#">Khushi</a>.</p>
     </div>
 </body>
+
 </html>
